--- a/prime_home/templates/prime_home/about_page.html
+++ b/prime_home/templates/prime_home/about_page.html
@@ -140,28 +140,28 @@
 						</p></div>
 					</li>	
 					<ul><!--3-->	
-						<li><a href="#"><img src="images/vp_bmanager_1.jpg"><span><b>VINCENT CORONADO </b><br>VP|BRANCH MANAGER</span></a>
+						<li><a href="#"><img src=""{{url_for('prime_home.static', filename='img/organization/vp_bmanager_1.jpg')}}"><span><b>VINCENT CORONADO </b><br>VP|BRANCH MANAGER</span></a>
 							<div class="content">  
 							<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.	
 							</p></div>
 							</li>										
-						<li><a href="#"><img src="images/vp_bmanager_2.jpg"><span><b>DANYLIL ASTURIAS </b><br>VP|BRANCH MANAGER</span></a>
+						<li><a href="#"><img src=""{{url_for('prime_home.static', filename='img/organization/vp_bmanager_2.jpg')}}"><span><b>DANYLIL ASTURIAS </b><br>VP|BRANCH MANAGER</span></a>
 							<div class="content">  
 							<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
 							</p></div>
 						</li>
-						<li><a href="#"><img src="images/vp_bmanager_3.jpg"><span><b>GERSON ALDE </b><br>VP|BRANCH MANAGER</span></a>
+						<li><a href="#"><img src=""{{url_for('prime_home.static', filename='img/organization/vp_bmanager_3.jpg')}}"><span><b>GERSON ALDE </b><br>VP|BRANCH MANAGER</span></a>
 							<div class="content">  
 							<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
 							</p></div>
 						</li>
-						<li><a href="#"><img src="images/sec_accnt_head.jpg"><span><b>HAIREL SUPRESENCIA </b><br>VP|BRANCH MANAGER</span></a>
+						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_accnt_head.jpg')}}"><span><b>HAIREL SUPRESENCIA </b><br>VP|BRANCH MANAGER</span></a>
 							<div class="content">  
 							<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
 							</p></div>
 						</li>									
 						<ul><!--4-->	
-						<li><a href="#"><img src="images/sec_teacher_1.jpg"><span><b> CRISTINE DAEL </b><br>TEACHER|SECRETARY</span></a>
+						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_teacher_1.jpg')}}"><span><b> CRISTINE DAEL </b><br>TEACHER|SECRETARY</span></a>
 							<div class="content">  
 							<p> Welcome students! <br> We're so glad you're here.<br><br>
 							Allow me to introduce myself. I am Teacher Cristine and I am so excited to share my expertise and be able to inspire you.<br><br>		
@@ -170,7 +170,7 @@
 							Come and enjoy my class! Be ready for the new version of yourselves. <br> See you soon!
 							</p></div>																
 						</li>			
-						<li><a href="#"><img src="images/sec_teacher_2.jpg"><span> <b>MAEVELLYN OLESCO</b><br>TEACHER|SECRETARY</span></a>
+						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_teacher_2.jpg')}}"><span> <b>MAEVELLYN OLESCO</b><br>TEACHER|SECRETARY</span></a>
 							<div class="content">  
 							<p> Hello there, <br>
 							This is teacher Maevellyn, I am so excited to have you in my class. As an educator I am grateful to be one of the tools of your success. I assure that our learning process will be a good foundation and fun. <br> <br>	
@@ -178,12 +178,12 @@
 							I hope to see you soon. 😊
 							</p></div>																	
 						</li>		
-						<li><a href="#"><img src="images/teacher_1.jpg"><span> <b>KATHLEEN FATIMA OMILAO RAMOS</b> <br>TEACHER</span></a>
+						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_1.jpg')}}"><span> <b>KATHLEEN FATIMA OMILAO RAMOS</b> <br>TEACHER</span></a>
 							<div class="content">  
 							<p> 안녕하세요 여러분! I am Teacher Kath, and I welcome you to Prime Language and Tech. Center. Here in Prime we value you. And just like our name, PRIME will provide you the best possible quality of learning that you will need to achieve your dream. I believe in you, and I believe that one day your dreams will come true. I know it's been a tough journey for everyone but I will guide you until we reach the end of the road -- your dream. And always remember why you started dreaming, is it for you? Your family? Your loved ones? So whenever you find yourself doubting if you can reach your goal, just remember why you started. Remember everything that you've gone through, all your sacrifices and fears that you've overcome. So never ever give up. I know you can do it. And I'll be more than happy to help and guide you with your journey.
 							</p></div>
 						</li>
-						<li><a href="#"><img src="images/teacher_2.jpg"><span> <b>JAY-AR MALDO </b><br>TEACHER</span></a>
+						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_2.jpg')}}"><span> <b>JAY-AR MALDO </b><br>TEACHER</span></a>
 							<div class="content">  
 							<p>안녕하세요 여러분! /HELLO EVERYONE 😍 <br><br>
 							"The capacity to learn is a GIFT; the ability to learn is a SKILL; the willingness to learn is a CHOICE."
@@ -197,60 +197,60 @@
 						</li>
 					</ul><!--4-->
 						<ul><!--5-->
-							<li><a href="#"><img src="images/teacher_3.jpg"><span> <b>ROYCE MARIE LABIAN </b><br>TEACHER</span></a>
+							<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_3.jpg')}}"><span> <b>ROYCE MARIE LABIAN </b><br>TEACHER</span></a>
 								<div class="content">  
 								<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
 								</p></div>
 							</li>
-							<li><a href="#"><img src="images/teacher_4.jpg"><span> <b>MA. THERESA CATALAN </b><br>TEACHER</span></a>
+							<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_4.jpg')}}"><span> <b>MA. THERESA CATALAN </b><br>TEACHER</span></a>
 								<div class="content">  
 								<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
 								</p></div>
 							</li>
-							<li><a href="#"><img src="images/teacher_5.jpg"><span> <b>ARLENE GALIPOSO </b><br>TEACHER</span></a>
+							<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_5.jpg')}}"><span> <b>ARLENE GALIPOSO </b><br>TEACHER</span></a>
 								<div class="content">  
 								<p> 안녕하세요! <br><br>
 								This is teacher Arlene Your korean teacher. I'm so excited to meet you and It is my pleasure to have you in my class. We're going to have fabulous days full of fun and learning. The Korean language is not that easy but I'm here! I'll make it easier for you.  Remember The journey of a thousand miles begins with one step, and this is the first step. Let's learn together and may our dreams come true.<br><br>
 								I hope to see you soon keep safe and god bless.
 								</p></div>
 							</li>
-							<li><a href="#"><img src="images/os_marketing_1.jpg"><span> <b>RUSSEL GALPO </b><br>OFFICE STAFF | MARKETING</span></a>
+							<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/os_marketing_1.jpg')}}"><span> <b>RUSSEL GALPO </b><br>OFFICE STAFF | MARKETING</span></a>
 								<div class="content">  
 								<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
 								</p></div>
 							</li>
 						</ul><!--5-->
 							<ul><!--6-->
-								<li><a href="#"><img src="images/sec_1.jpg"><span> <b>DANGELLI ROSE MUÑOZ </b><br>SECRETARY</span></a>
+								<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_1.jpg')}}"><span> <b>DANGELLI ROSE MUÑOZ </b><br>SECRETARY</span></a>
 									<div class="content">  
 									<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
 									</p></div>
 								</li>
-								<li><a href="#"><img src="images/vp_bmanager_2.jpg"><span> <b>DANYLIL ASTURIAS </b><br>SECRETARY</span></a>
+								<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/vp_bmanager_2.jpg')}}"><span> <b>DANYLIL ASTURIAS </b><br>SECRETARY</span></a>
 									<div class="content">  
 									<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
 									</p></div>
 								</li>
-								<li><a href="#"><img src="images/prime_logo.jpg"><span> <b>MELODY MARIE MACALISANG </b><br>SECRETARY</span></a>
+								<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span> <b>MELODY MARIE MACALISANG </b><br>SECRETARY</span></a>
 									<div class="content">  
 									<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
 									</p></div>
 								</li>
-								<li><a href="#"><img src="images/prime_logo.jpg"><span> <b>IRISH GOBANGCO </b><br>SECRETARY</span></a>
+								<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span> <b>IRISH GOBANGCO </b><br>SECRETARY</span></a>
 									<div class="content">  
 									<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
 									</p></div>
 								</li>
 							</ul><!--6-->
 								<ul><!--7-->
-									<li><a href="#"><img src="images/marketing_1.jpg"><span> <b> JAYSON VERSOSA </b><br>MARKETING STAFF</span></a></li>
-									<li><a href="#"><img src="images/marketing_2.jpg"><span> <b> CARLO GUANZON </b><br>MARKETING STAFF</span></a></li>
-									<li><a href="#"><img src="images/prime_logo.jpg"><span>  <br>MARKETING STAFF</span></a></li>
-									<li><a href="#"><img src="images/prime_logo.jpg"><span>  <br>MARKETING STAFF</span></a></li>
+									<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/marketing_1.jpg')}}"><span> <b> JAYSON VERSOSA </b><br>MARKETING STAFF</span></a></li>
+									<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/marketing_2.jpg')}}"><span> <b> CARLO GUANZON </b><br>MARKETING STAFF</span></a></li>
+									<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span>  <br>MARKETING STAFF</span></a></li>
+									<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span>  <br>MARKETING STAFF</span></a></li>
 								</ul><!--7-->
 									<ul><!--8-->
-										<li><a href="#"><img src="images/tricities.jpg"><span> <b>TRICITIES </b><br>BOOKKEPER</span></a></li>
-										<li><a href="#"><img src="images/prime_logo.jpg"><span> <b>LIKES TEAM </b><br>IT</span></a></li>
+										<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/tricities.jpg')}}"><span> <b>TRICITIES </b><br>BOOKKEPER</span></a></li>
+										<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span> <b>LIKES TEAM </b><br>IT</span></a></li>
 									</ul><!--8-->	
 					</ul><!--3-->						
 				</ul> <!--2-->													
