--- a/prime_home/templates/prime_home/about_page.html
+++ b/prime_home/templates/prime_home/about_page.html
@@ -140,17 +140,17 @@
 						</p></div>
 					</li>	
 					<ul><!--3-->	
-						<li><a href="#"><img src=""{{url_for('prime_home.static', filename='img/organization/vp_bmanager_1.jpg')}}"><span><b>VINCENT CORONADO </b><br>VP|BRANCH MANAGER</span></a>
+						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/vp_bmanager_1.jpg')}}"><span><b>VINCENT CORONADO </b><br>VP|BRANCH MANAGER</span></a>
 							<div class="content">  
 							<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.	
 							</p></div>
 							</li>										
-						<li><a href="#"><img src=""{{url_for('prime_home.static', filename='img/organization/vp_bmanager_2.jpg')}}"><span><b>DANYLIL ASTURIAS </b><br>VP|BRANCH MANAGER</span></a>
+						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/vp_bmanager_2.jpg')}}"><span><b>DANYLIL ASTURIAS </b><br>VP|BRANCH MANAGER</span></a>
 							<div class="content">  
 							<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
 							</p></div>
 						</li>
-						<li><a href="#"><img src=""{{url_for('prime_home.static', filename='img/organization/vp_bmanager_3.jpg')}}"><span><b>GERSON ALDE </b><br>VP|BRANCH MANAGER</span></a>
+						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/vp_bmanager_3.jpg')}}"><span><b>GERSON ALDE </b><br>VP|BRANCH MANAGER</span></a>
 							<div class="content">  
 							<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae odit ut labore esse omnis, possimus rerum vero cumque neque sapiente eum corrupti atque aut! Eum nam ex iste expedita distinctio.
 							</p></div>
