--- a/prime_admin/templates/lms/cash_flow.html
+++ b/prime_admin/templates/lms/cash_flow.html
@@ -101,6 +101,9 @@
                 "data": function (d) {
                     d.branch = $("#btn_branch_label").val();
                     d.from_what = "sales"
+                    d.date_from = $("#filter_date_from").val();
+                    d.date_to = $("#filter_date_to").val();
+                    d.transaction_type = $("#filter_transaction_type").val();
                 },
                 "dataSrc": function (json) {
                     var remaining = parseFloat(json.remaining).toFixed(2);
@@ -115,6 +118,9 @@
                     $("#fund2").html("₱" + fund2);
                     $("#final_fund1").html("₱" + json.finalFund1);
                     $("#final_fund2").html("₱" + json.finalFund2);
+                    $("#total_deposit").html("₱" + json.totalDeposit);
+                    $("#total_withdrawal").html("₱" + json.totalWithdrawal);
+                    $("#total_current_balance").html("₱" + json.totalCurrentBalance);
                     return json.data;
                 }
             }
@@ -543,6 +549,22 @@
                 }
             });
         });
+
+
+        // FILTERS
+
+        $('#filter_date_from').change(function () {
+            dtbl_statement.ajax.reload();
+        });
+
+        $('#filter_date_to').change(function () {
+            dtbl_statement.ajax.reload();
+        });
+
+        $('#filter_transaction_type').change(function () {
+            dtbl_statement.ajax.reload();
+        });
+        
     });
 </script>
 {% endblock %}
@@ -827,6 +849,71 @@
         {% endif %}
 
             <h5>Sales Statement</h5>
+            <div class="row">
+                <div class="col-lg-4 col-xl-4">
+                    <div class="card mb-3 widget-content">
+                        <div class="widget-content-wrapper">
+                            <div class="widget-content-left">
+                                <div class="widget-heading">Deposit</div>
+                                <div class="widget-subheading">Total</div>
+                            </div>
+                            <div class="widget-content-right">
+                                <div class="widget-numbers text-success"><span id="total_deposit">₱ 0.00</span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-4">
+                    <div class="card mb-3 widget-content">
+                        <div class="widget-content-wrapper">
+                            <div class="widget-content-left">
+                                <div class="widget-heading">Withdrawal</div>
+                                <div class="widget-subheading">Total</div>
+                            </div>
+                            <div class="widget-content-right">
+                                <div class="widget-numbers text-primary"><span id="total_withdrawal">₱ 0.00</span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-4">
+                    <div class="card mb-3 widget-content">
+                        <div class="widget-content-wrapper">
+                            <div class="widget-content-left">
+                                <div class="widget-heading">Current Balance</div>
+                                <div class="widget-subheading">Total</div>
+                            </div>
+                            <div class="widget-content-right">
+                                <div class="widget-numbers text-primary"><span id="total_current_balance">₱ 0.00</span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="col-md-2 col-xs-2">
+                    <div class="position-relative form-group">
+                        <label for="filter_date_from" class="">Date From</label>
+                        <input id="filter_date_from" type="date" class="form-control">
+                    </div>
+                </div>
+                <div class="col-md-2 col-xs-2">
+                    <div class="position-relative form-group">
+                        <label for="filter_date_to" class="">Date To</label>
+                        <input id="filter_date_to" type="date" class="form-control">
+                    </div>
+                </div>
+                <div class="col-md-2 col-xs-2">
+                    <div class="position-relative form-group">
+                        <label for="filter_transaction_type" class="">Transaction Type</label>
+                        <select id="filter_transaction_type" class="form-control">
+                            <option value="">All</option>
+                            <option value="deposit">Deposit</option>
+                            <option value="withdraw">Withdrawal</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
             <div class="table-responsive">
                 <table id="tbl_statement" class="align-middle mb-0 table table-bordered table-striped table-hover">
                     <thead>
@@ -837,24 +924,6 @@
                         </tr>
                     </thead>
                     <tbody>
-
-                        {% for row_data in TABLE_OPTIONS['table_data'] %}
-                 
-                        <tr class="item row_object" id="{{row_data[0]}}">
-                            {% for value in row_data %}
-
-                            <td class="text-center">
-                                {% if value == none %}
-                                <!-- pass -->
-                                {% else %}
-                                {{value}}
-                                {% endif %}
-                            </td>
-
-                            {% endfor %}
-                        </tr>
-                        {% endfor %}
-
                     </tbody>
                 </table>
             </div>
