--- a/prime_admin/templates/lms/supplies_table.html
+++ b/prime_admin/templates/lms/supplies_table.html
@@ -1,63 +1,89 @@
 {% extends 'admin/admin_table.html' %}
 
 
+{% block head %}
+<style>
+    table.dataTable thead th, table.dataTable thead td {
+        padding: 0px !important;
+      }
+</style>
+{% endblock head %}
+
 {% block scripts %}
 <script>
-    var dtbl_table;
+    $(document).ready(function () {
+        $("#li_supplies").addClass('mm-active');
 
-$(document).ready(function(){
-    $("#li_supplies").addClass('mm-active');
+        var dtbl_supplies = $("#tbl_supplies").DataTable({
+            "dom": 'rtip',
+            "processing": true,
+            "autoWidth": false,
+            "serverSide": true,
+            "ajax": {
+                "url": "/learning-management/datatables/supplies/monthly-transactions",
+                "data": function (d) {
+                    d.year = $("#filter_year").val();
+                    d.month = $("#filter_month").val();
+                }
+            },
+            "pageLength": 50,
+            "ordering": false,
+            "order": [[0, 'asc']],
+            "columnDefs": [
+                {
+                    'targets': 0,
+                    'visible': false
+                },
+            ],
+        });
 
-    $('#index_table tbody').on('click', '.btn-inbound', function () {
-        var data =  $(this).parents('tr').attr('id');
-        
-        console.log(data);
-        $("#supply_id").val(data);
+        $('#tbl_supplies tbody').on('click', '.btn-inbound', function () {
+            var data = $(this).parents('tr').attr('id');
+
+            console.log(data);
+            $("#supply_id").val(data);
+        });
+
+        $('#tbl_supplies tbody').on('click', '.btn-outbound', function () {
+            var data = $(this).parents('tr').attr('id');
+            $("#outbound_supply_id").val(data);
+        });
+
+        var dtbl_summaries = $("#tbl_summaries").DataTable({
+            "dom": 'rtip',
+            "processing": true,
+            "autoWidth": false,
+            "serverSide": true,
+            "ajax": {
+                "url": "/learning-management/datatables/supplies/summary",
+                "data": function (d) {
+                    d.year = $("#filter_year").val();
+                    d.month = $("#filter_month").val();
+                }
+            },
+            "pageLength": 50,
+            "ordering": false,
+            "order": [[0, 'asc']],
+            "columnDefs": [
+                {
+                    'targets': 0,
+                    'visible': false
+                },
+            ],
+        });
+
+        $("#filter_year").change(function(){
+            dtbl_supplies.ajax.reload();
+            dtbl_summaries.ajax.reload();
+        });
+
+        $("#filter_month").change(function(){
+            dtbl_supplies.ajax.reload();
+            dtbl_summaries.ajax.reload();
+        });
+
+
     });
-
-    $('#index_table tbody').on('click', '.btn-outbound', function () {
-        var data =  $(this).parents('tr').attr('id');
-        
-        console.log(data);
-        $("#outbound_supply_id").val(data);
-    });
-
-    var js_fields_array = JS_FIELDS.split(",");
-
-    for (i=0; i < js_fields_array.length; i++){
-        js_fields_array[i] = js_fields_array[i].replace('[', '');
-        js_fields_array[i] = js_fields_array[i].replace(']', '');
-        js_fields_array[i] = js_fields_array[i].replace('"', '');
-        js_fields_array[i] = js_fields_array[i].replace('"', '');
-        js_fields_array[i] = js_fields_array[i].replace(/\s/g, '');
-    }
-
-
-    $.ajaxSetup({
-        beforeSend: function(xhr, settings) {
-            if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
-                xhr.setRequestHeader("X-CSRFToken", CSRF_TOKEN);
-            }
-        }
-    });
-
-    dtbl_table = $('#index_table').DataTable({
-        "pageLength": 20,
-        "order": [[ 1, 'asc' ]]
-    });
-
-
-    dtbl_table.on( 'order.dt search.dt', function () {
-        dtbl_table.column(0, {search:'applied', order:'applied'}).nodes().each( function (cell, i) {
-            cell.innerHTML = i+1;
-        } );
-    } ).draw();
-
-
-    $('.search-input').on('keyup', function () {
-        dtbl_table.search(this.value).draw();
-    } );
-});
 </script>
 {% endblock %}
 
@@ -71,71 +97,144 @@ $(document).ready(function(){
                     <i class="{{ RENDERED_MODEL.__amicon__ }} icon-gradient bg-happy-itmeo"></i>
                 </div>
                 <div>
-                    {{ TABLE_OPTIONS['heading'] }}
+                    Supplies
                     <div class="page-title-subheading">
-                        {{ TABLE_OPTIONS['subheading'] }}
+                        Inventory
                     </div>
                 </div>
             </div>
-            
+
             {% block actions %}
 
-                {% if TABLE_OPTIONS['actions'] %}
-                    {% include TABLE_OPTIONS['action_template'] %}
-                {% endif %}
+            {% if TABLE_OPTIONS['actions'] %}
+            {% include TABLE_OPTIONS['action_template'] %}
+            {% endif %}
 
             {% endblock %}
-            
+
         </div>
     </div>
-            <div class="main-card mb-6 card">
-                    <div class="table-responsive">
-                        <table id="index_table" class="mb-0 table">
-                            <thead>
-                            <tr>
-                                <th class="text-center"></th>
-                                {% for column in TABLE_OPTIONS['table_columns'] %}
-                                <th class="text-center">{{ column.upper() }}</th>
-                                {% endfor %}
-                            </tr>
-                            </thead>
-                            <tbody>
-                                {% for row_data in TABLE_OPTIONS['table_data'] %}
-    
-                                    {% if TABLE_OPTIONS['view_modal'] %}
-                                        <tr class="item row_object" id="{{row_data[0]}}"  data-toggle="modal" data-target="#viewModal">
-                                        <param id="param_{{row_data[0]}}" name="param_{{row_data[0]}}" {% if TABLE_OPTIONS['edit_url'] %} value="{{url_for(TABLE_OPTIONS['edit_url'],oid=row_data[0] | string)}}" {% endif %}>
-                                    {% else %}
-                                        <tr class="item row_object" id="{{row_data[0]}}">
-                                    {% endif %}
-    
-                                        <!-- TEMPORARY conversion ng boolean word 'true' to 'YES' and 'false' to 'NO' -->
-                                        <td class="text-center"></td>
-    
-                                        {% for value in row_data %}
-                                            {% if loop.index > 1 %}
-    
-                                                <td class="text-center">
-                                                    {% if value == none %}
-                                                    <!-- pass -->
-                                                    {% elif value == "actions" %}
-                                                    <div class="row">
-                                                        <button style="margin-bottom: 8px; margin-left:5px;" type="button" data-toggle="modal" data-target="#mdl_inbound" class="mr-2 btn-icon btn-icon-only btn btn-outline-success btn-inbound"><i class="pe-7s-download btn-icon-wrapper"> </i></button>
-                                                        <button style="margin-bottom: 8px;" type="button" data-toggle="modal" data-target="#mdl_outbound" class="mr-2 btn-icon btn-icon-only btn btn-outline-danger btn-outbound"><i class="pe-7s-upload btn-icon-wrapper"> </i></button>
-                                                    </div>
-                                                    {% else %}
-                                                        {{value}}
-                                                    {% endif %}
-                                                </td>
-    
-                                            {% endif %}
-                                        {% endfor %}
+    <div class="main-card mb-6 card">
+        <div class="card-header">
+            <div id="card_header_label">ALL BRANCHES</div>
+        </div>
+        <div class="mb-12 card">
+            <div class="card-body">
+                <ul class="tabs-animated-shadow nav-justified tabs-animated nav">
+                    <li class="nav-item">
+                        <a role="tab" class="nav-link show active" id="tab-c1-0" data-toggle="tab"
+                            href="#tab-animated1-0" aria-selected="false">
+                            <span class="nav-text">MONTHLY TRANSACTIONS</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a role="tab" class="nav-link show" id="tab-c1-1" data-toggle="tab" href="#tab-animated1-1"
+                            aria-selected="false">
+                            <span class="nav-text">SUMMARY</span>
+                        </a>
+                    </li>
+                </ul>
+                <div class="tab-content">
+                    <div class="tab-pane show active" id="tab-animated1-0" role="tabpanel">
+                        <div class="form-row">
+                            <div class="col-md-1 col-xs-1">
+                                <div class="position-relative form-group">
+                                    <label for="filter_year" class="">Year</label>
+                                    <select id="filter_year" class="form-control" required>
+                                        <option value="all">All</option>
+                                        <option value="2021">2021</option>
+                                        <option value="2022">2022</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-md-1 col-xs-2">
+                                <div class="position-relative form-group">
+                                    <label for="filter_month" class="">Month</label>
+                                    <select id="filter_month" class="form-control" required>
+                                        <option value="all">All</option>
+                                        <option value="1">Jan</option>
+                                        <option value="2">Feb</option>
+                                        <option value="3">Mar</option>
+                                        <option value="4">Apr</option>
+                                        <option value="5">May</option>
+                                        <option value="6">Jun</option>
+                                        <option value="7">Jul</option>
+                                        <option value="8">Aug</option>
+                                        <option value="9">Sep</option>
+                                        <option value="10">Oct</option>
+                                        <option value="11">Nov</option>
+                                        <option value="12">Dec</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="table-responsive">
+                            <table id="tbl_supplies" class="align-middle mb-0 table table-bordered table-striped table-hover">
+                                <thead>
+                                    <tr>
+                                        <th class="text-center">ID</th>
+                                        <th class="text-center">DESCRIPTION</th>
+                                        <th class="text-center">1</th>
+                                        <th class="text-center">2</th>
+                                        <th class="text-center">3</th>
+                                        <th class="text-center">4</th>
+                                        <th class="text-center">5</th>
+                                        <th class="text-center">6</th>
+                                        <th class="text-center">7</th>
+                                        <th class="text-center">8</th>
+                                        <th class="text-center">9</th>
+                                        <th class="text-center">10</th>
+                                        <th class="text-center">11</th>
+                                        <th class="text-center">12</th>
+                                        <th class="text-center">13</th>
+                                        <th class="text-center">14</th>
+                                        <th class="text-center">15</th>
+                                        <th class="text-center">16</th>
+                                        <th class="text-center">18</th>
+                                        <th class="text-center">19</th>
+                                        <th class="text-center">20</th>
+                                        <th class="text-center">21</th>
+                                        <th class="text-center">22</th>
+                                        <th class="text-center">23</th>
+                                        <th class="text-center">24</th>
+                                        <th class="text-center">25</th>
+                                        <th class="text-center">26</th>
+                                        <th class="text-center">27</th>
+                                        <th class="text-center">28</th>
+                                        <th class="text-center">29</th>
+                                        <th class="text-center">30</th>
+                                        <th class="text-center">31</th>
+                                        <th class="text-center">TOTAL USED</th>
                                     </tr>
-                                {% endfor %}
-    
-                            </tbody>
-                        </table>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
+                    <div class="tab-pane show" id="tab-animated1-1" role="tabpanel">
+                        <div class="table-responsive">
+                            <table id="tbl_summaries" class="align-middle mb-0 table table-bordered table-striped table-hover">
+                                <thead>
+                                    <tr>
+                                        <th class="text-center">ID</th>
+                                        <th class="text-center">DESCRIPTION</th>
+                                        <th class="text-center">UOM</th>
+                                        <th class="text-center">REMAINING MATERIALS</th>
+                                        <th class="text-center">MAINTANING MATERIALS</th>
+                                        <th class="text-center">UNIT PRICE</th>
+                                        <th class="text-center">TOTAL</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
+     
+    </div>
 </div>
 {% endblock %}
