update: date of birth, contact_no and mname required

--- a/prime_admin/templates/lms/registration.html
+++ b/prime_admin/templates/lms/registration.html
@@ -357,7 +357,7 @@
                     <div class="col-md-3">
                         <div class="position-relative form-group">
                             <label for="mname" class="">Middle Name</label>
-                            <input name="mname" id="mname" type="text" class="form-control">
+                            <input name="mname" id="mname" type="text" class="form-control" required>
                             <div class="valid-feedback">
                                 Looks good!
                             </div>
@@ -384,7 +384,7 @@
                     <div class="col-md-3">
                         <div class="position-relative form-group">
                             <label for="birth_date" class="">Date of Birth</label>
-                            <input name="birth_date" id="birth_date" type="date" class="form-control">
+                            <input name="birth_date" id="birth_date" type="date" class="form-control" required>
                             <div class="valid-feedback">
                                 Looks good!
                             </div>
@@ -408,7 +408,7 @@
                     <div class="col-md-3">
                         <div class="position-relative form-group">
                             <label for="contact_number" class="">Contact No.</label>
-                            <input name="contact_number" id="contact_number" type="text" class="form-control">
+                            <input name="contact_number" id="contact_number" type="text" class="form-control" required>
                             <div class="valid-feedback">
                                 Looks good!
                             </div>
