--- a/prime_admin/templates/lms/registration.html
+++ b/prime_admin/templates/lms/registration.html
@@ -318,6 +318,7 @@
         <div class="main-card mb-3 card">
             <div class="card-body">
                 <h5 class="card-title">Member Information</h5>
+                <h4 style="color: cornflowerblue;">NOTE: Please ask the student for his/her details and ensure that the information entered is correct.</h4>
                 <div class="form-row">
                     <div class="col-md-3">
                         <div class="position-relative form-group">
