--- a/prime_admin/templates/lms/registration.html
+++ b/prime_admin/templates/lms/registration.html
@@ -421,7 +421,7 @@
                     <div class="col-md-3">
                         <div class="position-relative form-group">
                             <label for="email" class="">Email Address</label>
-                            <input name="email" id="email" type="email" class="form-control">
+                            <input name="email" id="email" type="email" class="form-control" required>
                             <div class="valid-feedback">
                                 Looks good!
                             </div>
