update: additional other expenses items

--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -420,7 +420,12 @@
                 $("#description").append($('<option></option>').attr("value", "GAS STOVE").text("GAS STOVE"));
                 $("#description").append($('<option></option>').attr("value", "BULB").text("BULB"));
                 $("#description").append($('<option></option>').attr("value", "BATTERY").text("BATTERY"));
-                $("#description").append($('<option></option>').attr("value", "LAPEL").text("LAPEL"));
+                $("#description").append($('<option></option>').attr("value", "DUCT TAPE").text("DUCT TAPE"));
+                $("#description").append($('<option></option>').attr("value", "CERTIFICATE HOLDER").text("CERTIFICATE HOLDER"));
+                $("#description").append($('<option></option>').attr("value", "WALL PAPER").text("WALL PAPER"));
+                $("#description").append($('<option></option>').attr("value", "RUGBY").text("RUGBY"));
+                $("#description").append($('<option></option>').attr("value", "TABLE").text("TABLE"));
+                $("#description").append($('<option></option>').attr("value", "DIVIDER").text("DIVIDER"));
             }
         });
 
