update: additional other expenses items

--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -426,6 +426,9 @@
                 $("#description").append($('<option></option>').attr("value", "RUGBY").text("RUGBY"));
                 $("#description").append($('<option></option>').attr("value", "TABLE").text("TABLE"));
                 $("#description").append($('<option></option>').attr("value", "DIVIDER").text("DIVIDER"));
+                $("#description").append($('<option></option>').attr("value", "DIVIDER").text("DIVIDER"));
+                $("#description").append($('<option></option>').attr("value", "SNPL PASSPORT FEE").text("SNPL PASSPORT FEE"));
+                $("#description").append($('<option></option>').attr("value", "SNPL EPS-TOPIK TEST FEE").text("SNPL EPS-TOPIK TEST FEE"));
             }
         });
 
