update: align summary list

--- a/prime_admin/templates/lms/student_supplies_page.html
+++ b/prime_admin/templates/lms/student_supplies_page.html
@@ -48,6 +48,7 @@
                 "data": function (d) {
                     d.year = $("#filter_year").val();
                     d.month = $("#filter_month").val();
+                    d.supplies_type = "student_supply";
                 }
             },
             "pageLength": 50,
